# Mlomega

./: .gitignore  pyproject.toml  pytest.ini  requirements-rtx3070.txt  requirements.txt
.claude/: settings.local.json
MLOmega_V18_8_1_Evidence_Connected/: .env.core-v18_8.template  .env.example  .env.windows.example  .gitignore  DOCTOR_MLOMEGA_V18_8.ps1  EXPORT_PHONE_CONFIG_V18_8.ps1  GUIDE_INSTALL_MLOMEGA_V18_8_RUNTIME.md  GUIDE_MLOMEGA_V18_8_INSTALL_RUN_RESUME.docx  INSTALL_MLOMEGA_V18_8_WINDOWS.ps1  INSTALL_TOUT_WINDOWS_MLOMEGA_V17_4.ps1  INSTALL_WINDOWS.bat  PROJECT_DOCTRINE.md  README.md  README_START_HERE_V18_8.md  RESUME_MLOMEGA_V18_8.ps1  RUN_FIRST_TEST.bat  RUN_MLOMEGA_V18_8.ps1  STOP_MLOMEGA_V18_8.ps1  V18_8_RELEASE_NOTES.md  V18_8_TEST_REPORT.md  VERSION  docker-compose.yml  release-manifest-v18_8.json  requirements-elite-audio.txt  requirements-v18_8-windows.lock.txt
MLOmega_V18_8_1_Evidence_Connected/MLOmega_Phone_Bridge_V18_8/: README_BRIDGE_V18_6_RESUMABLE.md
MLOmega_V18_8_1_Evidence_Connected/docs/: ARCHITECTURE_MEMOIRE_ELITE.md  COMPLETE_MEMORY_CONTRACT_V3_2_4.md  ELITE_STACK.md  GLOBAL_DISCOURSE_CONTEXT_V3_2_3.md  GUIDE_DEMARRAGE_COMPLET_V13_3.md  GUIDE_DEMARRAGE_COMPLET_V14_4.md  INPUT_TRANSCRIPT_SCHEMA.md  LIFE_STREAM_MEMORY_FOUNDATION_V3_3.md  MEMORY_FOUNDATION_V3_2.md  NEXT_STEPS.md  PRECISE_AUDIO_CONTEXT_V3_2_2.md  RUN_RTX3070.md  V12_BRAIN_2_FOUNDATION.md  V12_COMPLETE_BRAIN2_SYSTEM.md  V13_1_COMPLETE_FINAL_PLAN_COVERAGE.md  V13_2_STRICT_FINAL.md  V13_4_AUTONOMOUS_INSIGHT_LOOP.md  V13_BRAIN2_COMPLETE.md  V14_1_ROUTER_SELECTION_FINAL.md  V14_2_VECTOR_QUALITY_FINAL.md  V14_3_SELF_MODEL_SCHEDULER_FINAL.md  V14_4_AUTO_VERIFICATION_BRIDGE_FINAL.md  (+14 more)
configs/: MODEL_MANIFEST.yaml  cloud_llm.yaml
docs/: BENCH_RESULTS.md  DECISIONS.md  EXECUTOR_BUILD_GUIDE.md  EXECUTOR_HANDOFF.md  GUIDE_V19_REFERENCE.md  OUTSIDE_ACCESS.md  PROD_BACKLOG.md  V19_E1_E10_AUDIT.md
scripts/: BENCH_V19.ps1  DOCTOR_MLOMEGA_V19.ps1  INSTALL_MLOMEGA_V19_WINDOWS.ps1  RUN_MLOMEGA_V19.ps1  bench_v19_sim.py  fetch_models_v19.py  run_scenarios_v19.py  setup_profile.ps1  simonly_demo_v19.py  validate_contracts_v19.py
simulators/: fake_xr_device.py  synthetic_life.py
(+383 files in other folders)
